# ShortenerURL

./: README.md  docker-compose.yml  start.sh
backend/: Dockerfile  pyproject.toml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py
